--- a/.gitignore
+++ b/.gitignore
@@ -196,3 +196,7 @@ Thumbs.db
 
 # Ignore vscode AI rules
 .github/instructions/codacy.instructions.md
+
+# Snyk Security Extension - AI Rules (auto-generated)
+.github/instructions/snyk_rules.instructions.md
+.codacy/cli.sh
